fix iOS flicker

--- a/source/stylesheets/_mixins.scss
+++ b/source/stylesheets/_mixins.scss
@@ -255,11 +255,11 @@
 }
 
 @mixin hardware_accelerate() {
-  -webkit-transform: translate3d(0,0,0);
-  -moz-transform: translate3d(0,0,0);
-  -ms-transform: translate3d(0,0,0);
-  -o-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
+  -webkit-transform: translateZ(0) translate3D(0,0,0);
+  -moz-transform: translateZ(0) translate3D(0,0,0);
+  -o-transform: translateZ(0) translate3D(0,0,0);
+  -ms-transform: translateZ(0) translate3D(0,0,0);
+  transform: translateZ(0) translate3D(0,0,0);
 }
 
 @mixin transform3d($x:0px,$y:0px,$z:0px) {
