--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -32,15 +32,18 @@ body {
     //padding-bottom: 20px;
     //height:100%;
     position: relative;
+    //@include hardware_accelerate;
 }
 
 //background canvas
 #bg-canvas{
-position:fixed; 
-top:0;
-left:0;
-z-index: -1000;
-
+    position:fixed; 
+    top:0;
+    left:0;
+    z-index: -1000;
+    @include hardware_accelerate;
+    //-webkit-backface-visibility: hidden;
+//backface-visibility: hidden;
   /* background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAI0lEQVQIW2NkwAT/GdHE/gP5jMiCYAGQIpggXAAmiCIAEgQAAE4FBbECyZcAAAAASUVORK5CYII=) #222; */
 //background: url('<%= image_path('bg.jpg'); %>') no-repeat center center fixed;
   background: url(image-path('diamonds.png')) repeat;
@@ -48,7 +51,7 @@ z-index: -1000;
   //-moz-background-size: cover;
   //-o-background-size: cover;
   //background-size: cover;
-
+  
 }
 
 
